# Expander-cpp

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
.github/workflows/: cmake-multi-platform.yml
benchmarks/: CMakeLists.txt  bench_keccak.cpp  bench_kzg.cpp  bench_mcl.cpp  bench_transcript.cpp  transcript_benchmark
docs/: doc.md  example.md
include/LinearGKR/: LinearGKR.hpp  gkr.hpp  mpi_utils.hpp  scratch_pad.hpp  sumcheck.hpp  sumcheck_common.hpp  sumcheck_helper.hpp  sumcheck_verifier_utils.hpp
include/circuit/: circuit.hpp  circuit_raw.hpp
include/configuration/: config.hpp
include/fiat_shamir/: transcript.hpp
include/field/: M31.hpp  M31_avx.tcc  M31_neon.tcc  basefield.hpp  bigint.hpp  bn254_fr.hpp  utils.hpp
include/hash/: hashes.hpp  mimc.hpp
include/poly_commit/: fri.hpp  kzg.hpp  merkle.hpp  pc.hpp  poly.hpp  raw.hpp
include/poly_commit/bi-kzg/: bi-kzg.hpp
include/utils/: myutil.hpp  types.hpp
lib/Orion/: CMakeLists.txt  README.md  fft_gkr  setup.sh
lib/Orion/examples/: multivariate_PC_test.cpp  univariate_PC_test.cpp
lib/Orion/include/VPD/: fri.h  linearPC.h  vpd.h  vpd_prover.h  vpd_verifier.h
lib/Orion/include/flo-shani-aesni/: CMakeLists.txt  LICENSE  README.md
lib/Orion/include/flo-shani-aesni/aegis/: CMakeLists.txt  aegis_opt.c  aegis_ref.c  flo-aegis.h
lib/Orion/include/flo-shani-aesni/aes/: CMakeLists.txt  aesni.c  flo-aesni.h
lib/Orion/include/flo-shani-aesni/bench/: CMakeLists.txt  bench_aegis.c  bench_aes.c  bench_sha256.c  clocks.h
lib/Orion/include/flo-shani-aesni/cpuid/: CMakeLists.txt  flo-cpuid.c  flo-cpuid.h
lib/Orion/include/flo-shani-aesni/prng/: CMakeLists.txt  flo-random.c  flo-random.h
lib/Orion/include/flo-shani-aesni/sha256/: CMakeLists.txt  flo-shani.c  flo-shani.h  sha256_vectorized.c
lib/Orion/include/flo-shani-aesni/tests/: CMakeLists.txt  runTests.cpp  test_aes.cpp  test_sha256.cpp
lib/Orion/include/infrastructure/: RS_polynomial.h  constants.h  merkle_tree.h  my_hhash.h  utility.h
lib/Orion/include/linear_code/: expanders.h  linear_code_encode.h  parameter.h
lib/Orion/include/linear_gkr/: circuit_fast_track.h  polynomial.h  prime_field.h  prover.h  random_generator.h  verifier.h
lib/Orion/include/poly_commitment/: README.md  poly_commit.h
lib/Orion/lib/libXKCP.a.headers/: config.h
lib/Orion/src/: encode_test.cpp
lib/Orion/src/VPD/: fft_circuit_GKR.cpp  fri.cpp  linearPC.cpp  vpd_prover.cpp  vpd_verifier.cpp
lib/Orion/src/infrastructure/: RS_polynomial.cpp  merkle_tree.cpp  utility.cpp
lib/Orion/src/linear_code/: expander.cpp  linear_code_encode.cpp
lib/Orion/src/linear_gkr/: README.md  polynomial.cpp  prime_field.cpp  prover.cpp  verifier.cpp
lib/Orion/src/poly_commitment/: poly_commit.cpp
lib/btc_sha256/: CMakeLists.txt
lib/btc_sha256/compat/: byteswap.h  cpuid.h  endian.h
lib/btc_sha256/crypto/: common.h  sha256.cpp  sha256.h
scripts/: setup.sh
src/: CMakeLists.txt
tests/: CMakeLists.txt  GKR_Test.cpp  ff.cpp  fft.cpp  fri.cpp  gkr_mpi.cpp  kzg.cpp  merkle_tree.cpp  mimc.cpp  orion_pc.cpp  poly.cpp  roots_of_unity.cpp  sumcheck.cpp  transcript.cpp
